syntax = "proto3";

package notifier;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./api";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Notifier API";
  };
};

// The notifier service definition.
service Notifier {
  // Sends a notification
  rpc Notify (NotifyReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/notify"
      body: "*"
    };
  }
}

// The request message containing notification's id and event to notify about.
message Message {
  string notification_id = 1;
  oneof event {
    RuntimeEvent runtime_event = 5;
  }
}

message NotifyReq {
  repeated Message notifications = 1;
}

message RuntimeEvent {
  message Event {
    message Threat {
      string detector_id = 1;
      string detector_name = 2;
      uint32 detector_version = 3;
      string detector_description = 4;
      string severity = 5;
    }

    repeated Threat threats = 1;
    string event_type = 2;

    optional uint32 process_pid = 3;
    optional uint32 process_uid = 4;
    string process_binary = 5;
    string process_arguments = 6;
    optional uint32 process_setuid = 7;
    optional uint32 process_setgid = 8;
    repeated string process_cap_effective = 9;
    repeated string process_cap_permitted = 10;

    optional uint32 parent_pid = 11;
    optional uint32 parent_uid = 12;
    string parent_binary = 13;
    string parent_arguments = 14;

    string pod_namespace = 15;
    string pod_name = 16;
    string container_id = 17;
    string container_name = 18;
    string container_image = 19;
    string node_name = 20;

    string function_name = 21;
    // function_args represents json-serialized list of function's args
    string function_args = 22;
    // function_return represents json-serialized function's return value
    string function_return = 23;
  }

  Event event = 1;
  string severity = 2;
  google.protobuf.Timestamp registered_at = 3;
  string rule_name = 4;
  bool block = 5;
  // id of event in history-api
  string event_id = 6;
}
